# rank

./: .eslintrc.js  .gitignore  CODEOWNERS  Dockerfile  README.md  add_contributors.py  conftest.py  docker-compose.yml  package.json  pyproject.toml  rank_eval.json  rank_eval_contributors.json  rank_eval_titles.json  ranks.ts  requirements.in  requirements.txt  search_templates.json  test_search_template.json  tooling.Dockerfile  tsconfig.json  types.ts
.buildkite/: pipeline.yml
.buildkite/scripts/: autoformat.sh  format-python.sh  generate-cli-docs.sh  test-cli.sh
.github/: copilot-instructions.md
.github/workflows/: ccr.yml  rank-ci.yml  rank-deploy.yml
analysis/: README.md  docker-compose.yml
analysis/work/: 01 - building a dataset.ipynb  03 - time travel.ipynb  searches.csv
builds/terraform/github/: gha_role_rank.tf  gha_secret.tf  provider.tf  terraform.tf
candidates/index_config/: images-candidate.json  works-candidate.json
candidates/queries/: images-candidate.json  works-candidate.json
cli/: __init__.py  config.py  elasticsearch.py  main.py  plugin.py  pytest_plugin.py  rank_plugin.py  secrets.py
cli/cli_tests/: test_main.py
cli/commands/: __init__.py  index.py  query.py  search.py  task.py  test.py
cli/relevance_tests/: __init__.py  executors.py  models.py  test_basics.py  test_precision.py
cli/relevance_tests/images/: test_alternative_spellings.py  test_precision.py  test_recall.py
cli/relevance_tests/works/: test_alternative_spellings.py  (+3 more)
cli/services/: aws.py  elasticsearch.py
common/: types.ts
common/components/: ListItem.tsx
components/: ListItem.tsx  QueryForm.tsx  QueryIdSelect.tsx  Submit.tsx
data/: rank.ts  ratings_index.json
data/indices/: analyzers.ts  works-with-search-fields.ts
data/mappings/: images.json  images.ts  works.json  works.ts
data/queries/: languages.ts  works-with-search-fields.ts
data/ratings/: images.json  images.ts  pass.ts  queryAugmentation.ts  works.json  works.ts
data/tests/: images.ts  works.ts
docs/: README.md  adding-examples.md  arabic-examples.md  arabic_examples.md  cli-reference.md  developing-mappings.md  fuzzy-buckets.md  idealised-workflows.md  principles.md  search_relevance_tips.md
infrastructure/: .terraform.lock.hcl  ecr.tf  gha_role_rank.tf  gha_secret.tf  github.tf  terraform.tf
pages/: _app.tsx  _document.tsx  contributors.tsx  index.tsx  rank.tsx  rating.tsx  search.tsx  titles.tsx
pages/api/: ccr.ts  eval-template.ts  eval.ts  rank.ts  rank_contributors.ts  rating.ts  search.ts
queries/: alternative-title-spellings.ts  exact-title-match.ts  languages.ts  match-all.ts
scripts/: createTestIndex.ts  deleteTestIndex.ts  deploy_image.sh  getQueryJSON.ts  manage-index.ts  updateTestIndex.ts
services/: elasticsearch.ts  index-management.ts  search-templates.ts
terraform/: main.tf
tests/: test_pipeline_search_template.py  test_smoke.py
(+14 files in other folders)
