[tool.poetry]
name = "rank"
version = "0.1.0"
description = "A CLI for relevance testing our search services."
authors = ["Wellcome Collection <digital@wellcomecollection.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cli"}]

[tool.poetry.scripts]
rank = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pytest = "^7.4.0"
elasticsearch = "^8.9.0"
boto3 = "^1.28.16"
pydantic = "^2.1.1"
chevron = "^0.14.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.7.0"}
isort = "^5.12.0"
typer-cli = "^0.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = "--tb=short -r=N --no-header"
