[project]
name = "rank"
version = "0.1.0"
description = "A CLI for relevance testing our search services."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
	{ name = "Wellcome Collection", email = "digital@wellcomecollection.org" }
]
dependencies = [
	"typer[all]>=0.7.0,<0.8.0",
	"pytest>=7.4.0,<8.0.0",
	"elasticsearch>=8.10.0,<9.0.0",
	"boto3>=1.28.16,<2.0.0",
	"pydantic>=2.1.1,<3.0.0",
	"chevron>=0.14.0,<0.15.0",
	"requests>=2.31.0,<3.0.0",
	"beaupy>=3.5.4,<4.0.0",
	"click==8.1.8"
]

[project.scripts]
rank = "cli.main:app"

[dependency-groups]
dev = [
	"black[d]>=23.7.0,<24.0.0",
	"isort>=5.12.0,<6.0.0",
	"typer-cli>=0.0.13,<0.0.14"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = "--tb=short -r=N --no-header"
