[project]
name = "rank"
version = "0.1.0"
description = "A CLI for relevance testing our search services."
readme = "README.md"
requires-python = ">=3.10,<4"
license = { text = "MIT" }
authors = [
	{ name = "Wellcome Collection", email = "digital@wellcomecollection.org" },
]
dependencies = [
	"typer[all]>=0.7.0,<0.8.0",
	"pytest>=7.4.0,<8",
	"elasticsearch>=8.10.0,<9",
	"boto3>=1.28.16,<2",
	"pydantic>=2.1.1,<3",
	"chevron>=0.14.0,<0.15",
	"requests>=2.31.0,<3",
	"beaupy>=3.5.4,<4",
	"click==8.1.8",
]

[project.scripts]
rank = "cli.main:app"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.sdist]
include = [
	"/cli",
	"/docs",
	"/README.md",
	"/pyproject.toml",
]

[tool.uv]
dev-dependencies = [
	"ruff>=0.9.0,<0.10",
	"typer-cli>=0.0.13,<0.1",
]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
addopts = "--tb=short -r=N --no-header"
